--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "dev": "run-p start start:dev",
     "start:dev": "webpack-dev-server --config webpack.config.js",
     "start": "npm run server ",
-    "build": "webpack -p",
+    "build": "webpack --config webpack.config.js",
     "server": "cross-env NODE_ENV=production nodemon src/server/server",
     "start-prod": "npm run build && cross-env NODE_ENV=production nodemon src/server/server"
   },
