--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "start:dev": "webpack-dev-server --config webpack.config.js",
     "start": "npm run server",
     "build": "webpack --config webpack.config.js",
-    "server": "cross-env NODE_ENV=production nodemon src/server/server",
+    "heroku-postbuild": "npm run build",
+    "server": "nodemon src/server/server",
     "start-prod": "npm run build && cross-env NODE_ENV=production nodemon src/server/server"
   },
   "eslintConfig": {
